// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CellFixedWidth component matches the snapshot 1`] = `
<span
  className="Cell__CellBase-r62am5-0 Cell__CellFixedWidth-r62am5-2 fhqYmC"
>
  This is a cell with a fixed width
</span>
`;

exports[`the CellIcon component matches the snapshot 1`] = `
<span
  className="Cell__CellBase-r62am5-0 Cell__CellFixedWidth-r62am5-2 Cell__CellIcon-r62am5-4 iFszFE"
>
  Icon
</span>
`;

exports[`the CellMinWidth component matches the snapshot 1`] = `
<span
  className="Cell__CellBase-r62am5-0 Cell__CellMinWidth-r62am5-3 pYyvB"
>
  This is a call with a min width
</span>
`;

exports[`the CellPrimary component matches the snapshot 1`] = `
<span
  className="Cell__CellBase-r62am5-0 Cell__CellPrimary-r62am5-1 jztDGT"
>
  This is a primary cell
</span>
`;

exports[`the CellPrimary with responsiveHeaders matches the snapshot 1`] = `
<span
  className="Cell__CellBase-r62am5-0 Cell__CellPrimary-r62am5-1 Cell-r62am5-5 grewQu"
>
  This is a primary cell with responsive headers
</span>
`;
